# Wamas

./: .env.production  .replit  ADVANCED_ANALYTICS_IMPLEMENTATION_COMPLETE.md  ADVANCED_SYSTEM_ENHANCEMENT_REPORT.md  AI_ENHANCED_SYSTEM_STATUS.md  COMPREHENSIVE_AUDIT_REPORT.json  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_PERFORMANCE_REPORT.md  COMPREHENSIVE_SYSTEM_AUDIT_REPORT.md  COMPREHENSIVE_SYSTEM_REPORT.md  CRITICAL_SYSTEM_AUDIT_JUNE11.md  DATA_AUTHENTICITY_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION_COMPLETE.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_PRODUCTION_STATUS.md  FINAL_QA_VERIFICATION_REPORT.md  FINAL_SYSTEM_STATUS_JUNE11.md  FRONTEND_COMPLETE_SUMMARY.md  FRONTEND_ISSUES_RESOLVED.md  FRONTEND_REDESIGN_COMPLETE.md  FRONTEND_REDESIGN_FINAL_STATUS.md  GPT_ENHANCEMENT_STATUS.md  INTEGRATION_COMPLETE_SUMMARY.md  LIVE_AUTONOMOUS_TRADING_COMPLETE.md  LIVE_PRICE_DATA_AUDIT_COMPLETE.md  LOCAL_DEPLOYMENT_GUIDE_AR.md  MIGRATION_COMPLETE_REPORT.md  MOCK_DATA_ELIMINATION_REPORT.md  POST_UI_INTEGRATION_COMPLETE.md  PRODUCTION_LAUNCH_COMPLETE.md  PROFESSIONAL_FRONTEND_COMPLETE.md  QUICK_START_ENGLISH.md  SIGNAL_MARKET_TYPE_CLASSIFICATION_COMPLETE.md  SYSTEM_ARCHITECTURE_AUDIT_REPORT.md  SYSTEM_STATUS_REPORT.md  VERSION_v1.0_PRODUCTION.json  activate_profitable_trading.py  active_futures_trading_engine.py  advanced_futures_trading.db  (+306 more)
.streamlit/: config.toml
ai/: active_model.json  adaptive_model_selector.py  advanced_ml_pipeline.py  advisor.py  ai_performance_tracker.py  asset_explorer.py  auto_strategy_analyzer.py  autonomous_training_pipeline.py  ensemble.py  (+28 more)
(+216 files in other folders)
