[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0",
    "pandas>=2.3.0",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.1.2",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "streamlit>=1.45.1",
    "websocket-client>=1.8.0",
]
